:lipstick: fix: spacing and scrolling of the area where the selected cards are located

--- a/src/components/on_hand/on_hand.css
+++ b/src/components/on_hand/on_hand.css
@@ -2,6 +2,7 @@
   width: 100%;
 
   display: flex;
+  align-items: center;
   flex-direction: column;
   gap: 5px;
 }
@@ -21,4 +22,11 @@
 .on_hand_area>.hand_cards {
   padding: 5px;
   width: 100%;
+
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  gap: 1%;
+
+  overflow: auto;
 }
